<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/cardinal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Signup to the Cysino!"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="80dp"
        android:textSize="30dp"
        android:textColor="@color/black">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="USERNAME: "
            android:textSize="20dp"
            android:background="@color/white"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:id="@+id/signup_username_edt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="Enter Username Here">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PASSWORD: "
            android:textSize="20dp"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:id="@+id/signup_password_edt"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:hint="Enter Password Here">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70sp"
            android:text="confirm\npassword: "
            android:textSize="20dp"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:id="@+id/signup_confirm_edt"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:layout_height="70dp"
            android:hint="Enter Password Here">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signup_login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Login"
            android:textSize="20sp"
            android:textColor="@color/black">
        </Button>

        <Button
            android:id="@+id/signup_signup_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Signup"
            android:textSize="20sp"
            android:textColor="@color/black">
        </Button>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>