...
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/blackjackLbButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/gold"
                android:textColor="@color/cardinal"
                android:text="Button" />
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lb_names"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>

...
